add new endpoint for user
